# Physical-AI-Robotics-Book

./: .gitignore  .npmignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  tree.txt
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
.specify/memory/: constitution.md
backend/: README.md  main.py  pyproject.toml
backend/physical_ai_robotics_book_ingestion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/0_introduction/: environment-setup.mdx  what-is-physical-ai.mdx
docs/appendices/: _category_.json  cloud-setup.mdx  glossary.mdx  hardware-setup.mdx  resources.mdx  troubleshooting.mdx
docs/capstone/: _category_.json  architecture.mdx  deployment.mdx  integration.mdx  manipulation.mdx  navigation.mdx  overview.mdx  voice-pipeline.mdx
docs/intro/: course-overview.mdx  why-humanoid-robots.mdx
docs/module-1-ros2/: _category_.json  architecture.mdx  bridging-agents.mdx  launch-files.mdx  nodes-topics-services.mdx  python-packages.mdx  urdf-humanoids.mdx
docs/module-2-simulation/: _category_.json  gazebo-setup.mdx  hri-simulation.mdx  physics-simulation.mdx  sensor-simulation.mdx  unity-rendering.mdx  urdf-sdf.mdx
docs/module-3-isaac/: _category_.json  isaac-overview.mdx  nav2.mdx  reinforcement-learning.mdx  sim-to-real.mdx  synthetic-data.mdx  vslam.mdx
docs/module-4-vla/: _category_.json  cognitive-planning.mdx  conversational-ai.mdx  kinematics.mdx  locomotion.mdx  manipulation.mdx  (+2 more)
tests/: test_main.py
(+124 files in other folders)
